--- a/one/index.html
+++ b/one/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> 4주차 과제 21661084_윤수영 </title>
+        <title> one </title>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
