--- a/one/index.html
+++ b/one/index.html
@@ -16,7 +16,7 @@
         </p>
         <hr>
 
-        <p><img src="images/l.gif"></p>
+        <p><img src="images/i.gif"></p>
 
         <p>NAME - <b>Yoon Soo Young</b> </p>
         <p>BIRTH - 1996.11.18</p>
